@@ -6,6 +6,7 @@ Release 2.1.3
 ==================================
 
  * Absolute URLs are returned as absolute URLs in LinkUrlProcessor.
+ * RequestDataValueProcessor for Grails applications.
 
 Release 2.1.2
 ==================================
